--- a/package/system/procd/Makefile
+++ b/package/system/procd/Makefile
@@ -37,6 +37,8 @@ endif
 CMAKE_OPTIONS += -DEARLY_PATH="$(TARGET_INIT_PATH)"
 TARGET_LDFLAGS += $(if $(CONFIG_USE_GLIBC),-lrt)
 
+TARGET_CFLAGS += -Wno-error=format-truncation
+
 define Package/procd
   SECTION:=base
   CATEGORY:=Base system
